[package]
name = "microrust-start"
version = "0.1.0"
authors = ["Tarek Allam <t.allam.jr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "~0.2"
microbit="~0.7"
cortex-m-rt="~0.6"

[dependencies.stm32f0]
version = "0.11.0"
features = ["stm32f0x0", "rt"]
